--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "mongoose": "^8.2.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "redis": "^4.6.13",
     "stripe": "^14.19.0",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
